<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/forgotPass2"
        android:layout_width="89dp"
        android:layout_height="29dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:text="New User?"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />

    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="ID"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.914" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="166dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/forgotPass2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="41dp"
        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/login_portal"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="132dp"
        android:layout_height="27dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="129dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="243dp"
        android:layout_height="45dp"

        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/register"
        android:layout_width="121dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.987" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="114dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eye"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/eye"
        android:layout_width="49dp"
        android:layout_height="36dp"
        android:layout_alignEnd="@+id/id"
        android:layout_alignTop="@+id/pass"
        android:background="@drawable/hide_password"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toEndOf="@+id/forgotPass2"
        app:layout_constraintTop_toTopOf="parent"
        android:textOn=" "
        android:textOff=" "/>

</RelativeLayout>